# masters-thesis

./: README.md  pyproject.toml
data/infrastructure/: curvature_riddarhuskajen.csv  elevation_riddarholmsbron_n.csv  width_riddarholmsbron_n.csv  width_riddarholmsbron_s.csv
data/observations/: observations-clean.txt.stub
data/trajectories/source/: 1_Riddarhuskajen_summary.csv.stub  2_RiddarholmsbronN.csv.stub
thesis/: main.py
thesis/files/: __init__.py  crossing_times.py  filtering.py  infrastructure.py  observation_matching.py  observations.py  processed.py  trajectories.py
thesis/filtering/: area_intersection.py  filters.py
thesis/model/: enums.py  exprs.py  observations_periods.py
thesis/preprocessing/: __init__.py  observations.py  summary.py  trajectories.py
thesis/processing/: __init__.py  convex_hull.py  crossing_times.py  infrastructure.py  interpolation.py  riddarhuskajen.py
thesis/processing/interactions/: __init__.py  following.py  meeting.py  overtake.py
thesis/processing/observation_matching/: common.py  graph.py  time.py
thesis/results/: statistical_tests.py  statistics.py  trajectory_matching.py
thesis/results/graph/: __init__.py  distribution.py  infrastructure.py  interactions.py  linear.py
thesis/results/graph/helper/: background.py  columns.py  filter.py  massage.py
thesis/results/graph/riddarhuskajen/: __init__.py  (+2 more)
thesis/results/report/: corner_cutting.py  general.py  graphs.py  statistical_tests.py
thesis/test/: test_image_coord_transforms.py  test_intersections.py  test_model.py
thesis/util/: image_coord_transforms.py
