[project]
name = "bicycle-thesis"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "polars[timezone]>=1.21.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "vegafusion[embed]>=2.0.2",
    "vl-convert-python>=1.6.0",
]

[project.optional-dependencies]
extras = [
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pyarrow>=19.0.1",
    "visidata>=3.1.1",
]
